--- a/dashboard/scripts/js.html
+++ b/dashboard/scripts/js.html
@@ -7,6 +7,7 @@
     document.getElementById('start-date').textContent = formattedDate;
 
     const screenWidth = window.innerWidth;
+    const screenHeight = window.innerHeight;
     let fontSize = 10;
     if (screenWidth >= 3840) fontSize = 20;
     else if (screenWidth >= 1920) fontSize = 14;
