--- a/dashboard/scripts/js-income.html
+++ b/dashboard/scripts/js-income.html
@@ -1,6 +1,7 @@
 <!-- JavaScript -->
 <script>
     let datas = [];
+    let diffDatas = [];
     let branchs = [];
     let categories = [];
     let isLoading = true;
@@ -21,11 +22,6 @@
     document.addEventListener('DOMContentLoaded', async () => {
 
         await process();
-        // await Card1();
-        // await Card2();
-        // await Card3();
-        // await Card4();
-
         isLoading = false;
         // setInterval(async () => {
         // }, 10000);
@@ -36,6 +32,11 @@
         await initLoadData();
         await initHTML();
         await FilterDataForSearch(datas);
+
+        Card1();
+        Card2();
+        Card3(datas, diffDatas);
+        Card4(datas);
     }
 
     async function initLoadData() {
@@ -50,6 +51,10 @@
             const raw3 = await rescat.json();
             categories = raw3['data'];
 
+            const resdata2 = await fetch('../../api-website/fetch_expenses.php');
+            const raw4 = await resdata2.json();
+            diffDatas = raw4['data'];
+
         } catch (err) {
             console.error('❌ loadSensorData error:', err);
         }
@@ -62,19 +67,41 @@
 
     async function Card1() {
         console.log("Card 1");
-        const table_type = 1;     //Watch table id in 
         try {
-            const res = await fetch('../../api-website/fetch_tableByTypeId.php?typeId=' + table_type + "&aDay=" + diff.day);
-            const raw = await res.json();
-            const table = Object.values(raw.data);
+            if (!Array.isArray(datas) || datas.length === 0) {
 
-            const mealsCount = table[0].value;
-            const volumeMeal = table[0].children[0]['value'];
-            const totalMealperDay = (toNumber(mealsCount) * toNumber(volumeMeal)) || "-";
+            }
 
-            SetValueInHTMLById('meals-count', mealsCount);
-            SetValueInHTMLById('volume-meal', volumeMeal);
-            SetValueInHTMLById('total-meal-per-day', totalMealperDay);
+            // 🔹 group ยอดตามเดือน (format: YYYY-MM)
+            const monthlyTotals = datas.reduce((acc, item) => {
+                if (!item.start_income_date || !item.amount) return acc;
+
+                const date = new Date(item.start_income_date);
+                if (isNaN(date)) return acc;
+
+                const key = `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}`;
+
+                acc[key] = (acc[key] || 0) + parseFloat(item.amount);
+                return acc;
+            }, {});
+
+            const now = new Date();
+            const currentKey = `${now.getFullYear()}-${String(now.getMonth() + 1).padStart(2, '0')}`;
+
+            const prevDate = new Date(now.getFullYear(), now.getMonth() - 1, 1);
+            const previousKey = `${prevDate.getFullYear()}-${String(prevDate.getMonth() + 1).padStart(2, '0')}`;
+
+            const currentTotal = monthlyTotals[currentKey] || 0;
+            const previousTotal = monthlyTotals[previousKey] || 0;
+
+            let percent = 0;
+
+            if (previousTotal > 0) {
+                percent = ((currentTotal - previousTotal) / previousTotal) * 100;
+            }
+
+            SetValueInHTMLById('card-1-total', currentTotal.toLocaleString('th-TH'));
+            SetValueInHTMLById('card-1-percent', percent + '%');
 
         } catch (err) {
             console.error('❌ loadSensorData error:', err);
@@ -83,95 +110,139 @@
 
     async function Card2() {
         console.log("Card 2");
-        const table_type_humidity = 5;     //Watch table id in database
-        try {
-            const res = await fetch('../../api-website/fetch_tableByTypeId.php?typeId=' + table_type_humidity + "&aDay=" + diff.day);
-            const raw = await res.json();
-            const humidityTable = Object.values(raw.data);
-
-            const humidity = humidityTable[0].value;
-
-            SetValueInHTMLById('humidity', humidity + "%");
-
-        } catch (err) {
-            console.error('❌ loadSensorData error:', err);
-        }
-
-
-        // =============== Light ==============
-        const table_type_light = 4;     //Watch table id in database
-        try {
-            const res = await fetch('../../api-website/fetch_tableByTypeId.php?typeId=' + table_type_light + "&aDay=" + diff.day);
-            const raw = await res.json();
-            const LuminanceTable = Object.values(raw.data);
-            console.log(LuminanceTable);
-
-            const totalhours = LuminanceTable[0].value;
-            const lighttime = LuminanceTable[0].children[0].value;
-            const luminance = LuminanceTable[0].children[1].value;
-
-            SetValueInHTMLById('total-hours', totalhours);
-            SetValueInHTMLById('light-time', lighttime);
-            SetValueInHTMLById('light-recommentation', luminance);
-
-        } catch (err) {
-            console.error('❌ loadSensorData error:', err);
-        }
 
     }
 
-    async function Card3() {
-        console.log("Card 3");
-        try {
-            const res = await fetch('../../api-website/fetch_expenseBycategory.php?bid=1');
-            const raw = await res.json();
-            const expense = raw['data'];
+    function Card3(income_data, expense_data) {
+        const now = new Date();
+        const currentMonth = now.getMonth();
+        const currentYear = now.getFullYear();
 
+        // กรองข้อมูลเดือนปัจจุบัน
+        const filterIncomeMonth = (data) => {
+            return data.filter(item => {
+                const d = new Date(item.start_income_date);
+                return d.getMonth() === currentMonth && d.getFullYear() === currentYear;
+            });
+        };
 
-            const electricityEl = document.getElementById('electricity-usage');
-            const waterEl = document.getElementById('water-usage');
+        // กรองข้อมูลเดือนปัจจุบัน
+        const filterExpenseMonth = (data) => {
+            return data.filter(item => {
+                const d = new Date(item.start_expense_date);
+                return d.getMonth() === currentMonth && d.getFullYear() === currentYear;
+            });
+        };
 
-            if (electricityEl) {
-                electricityEl.style.fontSize = (fontSize * 2) + "px";
-                electricity = Number(expense[0]?.electricity) || 0;
-                electricityEl.textContent = electricity;
-            }
-            if (waterEl) {
-                waterEl.style.fontSize = (fontSize * 2) + "px";
-                water = Number(expense[0]?.water) || 0;
-                waterEl.textContent = water;
-            }
+        const incomeMonth = filterIncomeMonth(income_data);
+        const expenseMonth = filterExpenseMonth(expense_data);
 
-        } catch (err) {
-            console.error('❌ loadSensorData error:', err);
-        }
+        const totalIncome = incomeMonth.reduce((sum, i) => sum + Number(i.amount), 0);
+        const totalExpense = expenseMonth.reduce((sum, i) => sum + Number(i.amount), 0);
 
+        const netProfit = totalIncome - totalExpense;
+
+        // แสดงยอดรวม
+        document.getElementById("card3-total").textContent = formatNumber(netProfit);
+
+        // ===== Weekly Net Profit =====
+        const weeks = [0, 0, 0, 0];
+
+        incomeMonth.forEach(item => {
+            const day = new Date(item.start_income_date).getDate();
+            const weekIndex = Math.floor((day - 1) / 7);
+            weeks[weekIndex] += Number(item.amount);
+        });
+
+        expenseMonth.forEach(item => {
+            const day = new Date(item.start_expense_date).getDate();
+            const weekIndex = Math.floor((day - 1) / 7);
+            weeks[weekIndex] -= Number(item.amount);
+        });
+
+        const maxValue = Math.max(...weeks.map(w => Math.abs(w)), 1);
+
+        const barsContainer = document.getElementById("card3-bars");
+        barsContainer.innerHTML = "";
+
+        weeks.forEach(value => {
+
+            const percent = (Math.abs(value) / maxValue) * 100;
+
+            const bar = document.createElement("div");
+            bar.className = "flex-1 rounded-t-sm transition-all";
+            bar.style.height = percent + "%";
+            bar.classList.add(
+                value >= 0
+                    ? "bg-emerald-400"
+                    : "bg-red-400"
+            );
+
+            barsContainer.appendChild(bar);
+        });
     }
 
-    async function Card4() {
-        console.log("Card 4");
-        try {
-            const res = await fetch('../../api-website/fetch_expenseBycategory.php?bid=1');
-            const raw = await res.json();
-            const expense = raw['data'];
+    function Card4(income_data) {
 
-            const electricity = Number(expense[0]?.electricity) || 0;
-            const water = Number(expense[0]?.water) || 0;
-            const hardware = Number(expense[0]?.hardware) || 0;
-            const infrastructure = Number(expense[0]?.infrastructure) || 0;
-            const miscellaneous = Number(expense[0]?.miscellaneous) || 0;
-            const total = hardware + infrastructure + miscellaneous + electricity + water;
+        const categoryMap = {};
 
-            SetValueInHTMLById('electricity-usage', electricity);
-            SetValueInHTMLById('water-usage', water);
-            SetValueInHTMLById('expense-hardware', hardware);
-            SetValueInHTMLById('expense-infrastructure', infrastructure);
-            SetValueInHTMLById('expense-miscellaneous', miscellaneous);
-            SetValueInHTMLById('expense-total', total);
+        income_data.forEach(item => {
+            if (!categoryMap[item.category_id]) {
+                categoryMap[item.category_id] = 0;
+            }
+            categoryMap[item.category_id] += Number(item.amount);
+        });
 
-        } catch (err) {
-            console.error('❌ loadSensorData error:', err);
-        }
+        const sorted = Object.entries(categoryMap)
+            .sort((a, b) => b[1] - a[1]);
+
+        const totalIncome = sorted.reduce((sum, c) => sum + c[1], 0);
+
+        const top3 = sorted.slice(0, 3);
+
+        const listEl = document.getElementById("card4-list");
+        const progressEl = document.getElementById("card4-progress");
+
+        listEl.innerHTML = "";
+        progressEl.innerHTML = "";
+
+        top3.forEach((item, index) => {
+
+            const categoryId = item[0];
+            const amount = item[1];
+            const percent = ((amount / totalIncome) * 100).toFixed(1);
+
+            let categoryName = categories.find(c => c['id'].toString() == categoryId.toString())?.name || "--";
+
+            listEl.innerHTML += `
+            <div class="flex items-center justify-between">
+                <div class="flex items-center gap-3">
+                    <div class="w-8 h-8 rounded-full bg-blue-100 flex items-center justify-center font-bold text-[10px]">
+                        #${index + 1}
+                    </div>
+                    <div>
+                        <p class="text-xs font-semibold">${categoryName}</p>
+                        <p class="text-[10px] text-slate-400">ID: ${categoryId}</p>
+                    </div>
+                </div>
+                <div class="text-right">
+                    <p class="text-xs font-bold">฿${formatNumber(amount)}</p>
+                    <p class="text-[10px] text-slate-400">${percent}%</p>
+                </div>
+            </div>
+        `;
+
+            const bar = document.createElement("div");
+            bar.className = "h-full";
+            bar.style.width = percent + "%";
+            bar.classList.add(
+                index === 0 ? "bg-blue-500" :
+                    index === 1 ? "bg-purple-500" :
+                        "bg-orange-400"
+            );
+
+            progressEl.appendChild(bar);
+        });
     }
 
     async function FilterDataForSearch(datas) {
